# parrot

./: Makefile.am  Makefile.in  cparrot.cpp  parrot-lib.cpp  parrot-lib.h  parrot-ncs.cpp  parrot-ncs.h  parrot-ncsaver.cpp  parrot-ncsaver.h  parrot-ncsfind.cpp  parrot-ncsfind.h  simplex-lib.cpp
